crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_move_bind_value_to_var_props.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { $, component$, useSignal } from "@qwik.dev/core";
import { destructureBindings } from "./destructure-bindings";

export const FieldInput = component$((props) => {
  const initialValues = { value: undefined as string | undefined };
  const rest = destructureBindings(props, initialValues);

  return (
    <input
      {...rest}
      bind:value={finalValue}
      onClick$={() => {
        console.log("clicked");
      }}
    />
  );
});

============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_V4XAtJSTRKg = () => import("./test.tsx_FieldInput_component_V4XAtJSTRKg");
export const FieldInput = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_V4XAtJSTRKg, "FieldInput_component_V4XAtJSTRKg"),
);

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;AAGA,OAAO,MAAM,2BAAa,mFAavB"}',
);
============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { destructureBindings } from "./destructure-bindings";
import { qrl } from "@qwik.dev/core";
const i_fZgZHYZXt60 = () => import("./test.tsx_FieldInput_component_input_q_e_click_fZgZHYZXt60");
export const FieldInput_component_V4XAtJSTRKg = (props) => {
  const initialValues = {
    value: undefined,
  };
  const rest = destructureBindings(props, initialValues);
  return /*#__PURE__*/ _jsxSplit(
    "input",
    {
      ..._getVarProps(rest),
      ..._getConstProps(rest),
      "bind:value": finalValue,
    },
    {
      "q-e:click": /*#__PURE__*/ qrl(
        i_fZgZHYZXt60,
        "FieldInput_component_input_q_e_click_fZgZHYZXt60",
      ),
    },
    null,
    0,
    "u6_0",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;;;gDAGqC,CAAC;IACpC,MAAM,gBAAgB;QAAE,OAAO;IAAgC;IAC/D,MAAM,OAAO,oBAAoB,OAAO;IAExC,qBACE,UAAC;wBACK;0BAAA;QADN,cAEc;;QACZ,WAAQ;;AAKd"}',
);
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    160,
    446
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_FieldInput_component_input_q_e_click_fZgZHYZXt60.js (ENTRY POINT)==
export const FieldInput_component_input_q_e_click_fZgZHYZXt60 = () => {
  console.log("clicked");
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"gEAWgB;IACR,QAAQ,GAAG,CAAC;AACd"}',
);
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_click_fZgZHYZXt60",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_click",
  "hash": "fZgZHYZXt60",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_click_fZgZHYZXt60",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_V4XAtJSTRKg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    384,
    431
  ]
}
*/
== DIAGNOSTICS ==

[]
