crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_not_move_over_side_effects.snap
---
source: src/test.rs
expression: output
---
==INPUT==
export const $promoteToRoot$ = (ref: SeenRef) => {
  const path = $getObjectPath$(ref) as string;
  // should stay before the push
  const idx = roots.length;
  roots.push(new BackRef(path));
  ref.$parent$ = null;
  ref.$index$ = idx;
  return idx;
};

============================= test.js ==
export const $promoteToRoot$ = (ref) => {
  const path = $getObjectPath$(ref);
  // should stay before the push
  const idx = roots.length;
  roots.push(new BackRef(path));
  ref.$parent$ = null;
  ref.$index$ = idx;
  return idx;
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"AAAA,OAAO,MAAM,kBAAkB,CAAC;IAC9B,MAAM,OAAO,gBAAgB;IAC7B,8BAA8B;IAC9B,MAAM,MAAM,MAAM,MAAM;IACxB,MAAM,IAAI,CAAC,IAAI,QAAQ;IACvB,IAAI,QAAQ,GAAG;IACf,IAAI,OAAO,GAAG;IACd,OAAO;AACT,EAAE"}',
);
== DIAGNOSTICS ==

[]
