crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_not_transform_bind_checked_in_var_props_for_jsx_split.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$((props) => {
  const input = useSignal(true);

  return (
    <>
      {/* var props */}
      <input bind:checked={input} {...props} />
      {/* const props */}
      <input {...props} bind:checked={input} />
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_FieldInput_component_XXXXXXXXXXXX");
export const FieldInput = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "FieldInput_component_XXXXXXXXXXXX"),
);
=== test.tsx_FieldInput_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const FieldInput_component_XXXXXXXXXXXX = (props) => {
  const input = useSignal(true);
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSplit(
        "input",
        {
          "bind:checked": input,
          ..._getVarProps(props),
        },
        _getConstProps(props),
        null,
        0,
        null,
      ),
      /* @__PURE__ */ _jsxSplit(
        "input",
        {
          ..._getVarProps(props),
          "bind:checked": input,
        },
        _getConstProps(props),
        null,
        0,
        null,
      ),
    ],
    1,
    "u6_0",
  );
};
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_FieldInput_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ===

[]
